--- a/components/textfield/src/vwc-textfield-input.scss
+++ b/components/textfield/src/vwc-textfield-input.scss
@@ -56,7 +56,17 @@
 		transition: opacity 100ms;
 	}
 
-	::slotted(#{textfield-variables.$vvd-input-selector}:placeholder-shown:not(:focus)) {
-		opacity: 0;
+	.mdc-text-field {
+		::slotted(.vivid-input-internal)::placeholder {
+			opacity: 0;
+		}
+
+		&.mdc-text-field--no-label,
+		&.mdc-text-field--label-floating {
+			::slotted(.vivid-input-internal)::placeholder {
+				opacity: 1;
+			}
+		}
 	}
 }
+
