fix(ghost): transparent bg

--- a/components/select/src/vwc-select.scss
+++ b/components/select/src/vwc-select.scss
@@ -217,6 +217,15 @@ vwc-notched-outline {
 	.mdc-select__anchor {
 		display: block;
 	}
+	.mdc-select--outlined {
+		--mdc-select-fill-color: transparent;
+	}
+}
+
+:host([appearance='ghost'i][dense][disabled]) {
+	.mdc-select.mdc-select--outlined {
+		background-color: transparent;
+	}
 }
 
 
