feat(tags): support removable (#1266)
* feat(tags): support removable

* set connotation outline

* icon color

* ui

* revert

* Update components/tags/src/vwc-tag.scss

Co-authored-by: rachelbt <rachelbt@users.noreply.github.com>

Co-authored-by: rachelbt <rachelbt@users.noreply.github.com>

--- a/components/tags/src/vwc-tag.scss
+++ b/components/tags/src/vwc-tag.scss
@@ -83,6 +83,7 @@
 
 	&.vwc-tag--selected {
 		&.layout-outlined {
+			border-color: var(#{layout.$vvd-layout-color-outline});
 			background-color: var(#{connotation.$vvd-color-connotation}-soft);
 			color: var(#{connotation.$vvd-color-connotation}-contrast);
 		}
@@ -105,6 +106,7 @@
 	}
 
 	> .vwc-tag__icon {
+		#{connotation.$vvd-color-connotation}: initial;
 		block-size: var(#{tags-variables.$namespace-icon-checkmark--size});
 		inline-size: var(#{tags-variables.$namespace-icon-checkmark--size});
 
@@ -126,3 +128,11 @@
 // 	}
 // }
 
+.remove-button {
+	all: unset;
+	margin-inline-start: 10px;
+
+	.vwc-tag__icon {
+		--vvd-icon-size: 12px;
+	}
+}
