--- a/components/card/src/vwc-card.scss
+++ b/components/card/src/vwc-card.scss
@@ -18,13 +18,13 @@
 	&-content {
 		display: flex;
 		flex-flow: column;
-		padding: 1.5rem;
+		padding: 24px;
 	}
 
 	&-wrapper {
 		display: flex;
 		width: 100%;
-		column-gap: 0.5rem;
+		column-gap: 8px;
 		:host([text]) & {
 			margin-bottom: 12px;
 		}
@@ -34,7 +34,7 @@
 		display: inline-flex;
 		align-items: flex-start;
 		justify-content: space-between;
-		column-gap: 0.5rem;
+		column-gap: 8px;
 	}
 
 	&-title,
@@ -64,16 +64,16 @@
 	}
 
 	&-text {
-		padding-right: 0.5rem;
+		padding-right: 8px;
 	}
 
 	&-footer {
 		display: inline-flex;
 		flex-direction: column;
 		align-items: flex-end;
-		padding-bottom: 1.5rem;
+		padding-bottom: 24px;
 		margin-top: auto;
-		padding-inline: 1.5rem;
+		padding-inline: 24px;
 	}
 }
 
@@ -92,8 +92,8 @@
 ::slotted([slot="meta"i]) {
 	flex-shrink: 0;
 	align-self: flex-start;
-	margin-block-start: -0.5rem;
-	margin-inline-end: -0.5rem;
+	margin-block-start: -8px;
+	margin-inline-end: -8px;
 	margin-inline-start: auto;
 }
 
