fix(style): move from rem to px

--- a/components/tooltip/src/vwc-tooltip.scss
+++ b/components/tooltip/src/vwc-tooltip.scss
@@ -7,7 +7,7 @@
 
 	&-title {
 		@include typography.typography-cat-shorthand('body-2-bold');
-		padding: 0.5rem 0.75rem;
+		padding: 8px 12px;
 		color: var(#{scheme-variables.$vvd-color-primary});
 	}
 }
