--- a/components/button/src/vwc-button.scss
+++ b/components/button/src/vwc-button.scss
@@ -132,12 +132,12 @@
 
 		> .leading-icon vwc-icon,
 		.leading-icon ::slotted(*) {
-			margin-block-end: 0.5rem;
+			margin-block-end: 8px;
 		}
 
 		> .trailing-icon vwc-icon,
 		.trailing-icon ::slotted(*) {
-			margin-block-start: 0.5rem;
+			margin-block-start: 8px;
 		}
 
 		.trailing-icon ::slotted(*),
