--- a/components/note/src/vwc-note.scss
+++ b/components/note/src/vwc-note.scss
@@ -2,22 +2,29 @@
 @use '@vonage/vvd-typography/scss/typography';
 @use '@vonage/vvd-foundation/scss/mixins/connotation/config' with (
 	$connotations-set: success alert warning info announcement,
+	$shades: (soft),
 	$default: announcement,
-);
-@use '@vonage/vvd-foundation/scss/mixins/connotation';
 
+);
+@use '@vonage/vvd-foundation/scss/mixins/connotation' as connotation;
+
+@use '@vonage/vvd-foundation/scss/mixins/layout/config' as layout-config with (
+	$layout-set: outlined soft,
+	$outline-duotone: flase,
+	$default: soft,
+);
+@use '@vonage/vvd-foundation/scss/mixins/layout' as layout;
 
 .vwc-note {
 	@include connotation.connotation;
+	@include layout.layout;
+
 	display: flex;
 	align-items: stretch;
 	padding: 20px;
-	border-left: 8px solid var(#{connotation.$vvd-color-connotation});
-	background-color: var(#{scheme-variables.$vvd-color-canvas});
+	background-color: var(#{layout.$vvd-layout-color-fill});
 	border-radius: 6px;
-	box-shadow: inset 0 1px 0 0 var(#{scheme-variables.$vvd-color-neutral-40}),
-		inset -1px 0 0 0 var(#{scheme-variables.$vvd-color-neutral-40}),
-		inset 0 -1px 0 0 var(#{scheme-variables.$vvd-color-neutral-40});
+	box-shadow: inset 0 0 0 1px var(#{connotation.$vvd-color-connotation});
 	color: var(#{scheme-variables.$vvd-color-on-canvas});
 	@supports(contain: content) {
 		contain: content;
@@ -28,7 +35,6 @@
 }
 
 .note-icon {
-	#{connotation.$vvd-color-connotation}: currentColor;
 	margin-inline-end: 16px;
 }
 
@@ -41,7 +47,7 @@
 	text-align: start;
 
 	.note-header {
-		@include typography.typography-cat-shorthand('body-2-bold');
+		@include typography.typography-cat-shorthand('body-1-bold');
 		margin-block-end: 4px;
 	}
 
