chore(button): reduce line-height to support 2 lines

--- a/components/button/src/vwc-button.scss
+++ b/components/button/src/vwc-button.scss
@@ -49,6 +49,7 @@
 	// ! this was supposed to be set by MDC
 	font-stretch: var(--mdc-typography-button-font-stretch);
 	letter-spacing: normal;
+	line-height: 1;
 
 	&:not(.mdc-button--dense) {
 		vwc-icon {
