fix(button): apply line height through var

--- a/components/button/src/vwc-button.scss
+++ b/components/button/src/vwc-button.scss
@@ -31,6 +31,9 @@
 	}
 }
 
+:host {
+	--vvd-typography-line-height: 1.1;
+}
 
 .mdc-button {
 	--mdc-button-disabled-ink-color: var(#{vvd-formfield.$formfield-disabled-ink});
@@ -49,7 +52,6 @@
 	// ! this was supposed to be set by MDC
 	font-stretch: var(--mdc-typography-button-font-stretch);
 	letter-spacing: normal;
-	line-height: 1.1;
 
 	&:not(.mdc-button--dense) {
 		vwc-icon {
