--- a/components/audio/src/vwc-audio.scss
+++ b/components/audio/src/vwc-audio.scss
@@ -7,7 +7,7 @@
 @use '@vonage/vvd-foundation/scss/mixins/connotation' as connotation;
 @use '@vonage/vwc-media-controller/src/partials/vwc-media-controller-variables' as media-controls-variables;
 
-$disabled: #{$disabled};
+$disabled: var(--vvd-color-neutral-50);
 
 :host {
 	*:focus:not(:focus-visible) {
@@ -49,19 +49,23 @@ $disabled: #{$disabled};
 				#{media-controls-variables.$vwc-media-controls-scrubber-color}: #{$disabled};
 
 			}
-
 			> .control-button {
 				> .icon {
 					--connotation: #{$disabled};
 				}
 			}
+			> .playhead-position {
+				color: var(#{scheme-variables.$vvd-color-neutral-40});
+			}
 		}
 
 		> .playhead-position {
+
 			overflow: hidden;
 			width: 90px;
 			box-sizing: border-box;
 			justify-content: center;
+			color: var(#{scheme-variables.$vvd-color-on-canvas});
 			font-variant-numeric: tabular-nums;
 			text-align: center;
 			text-overflow: ellipsis;
