--- a/components/audio/src/vwc-audio.scss
+++ b/components/audio/src/vwc-audio.scss
@@ -53,6 +53,7 @@ $disabled: var(--vvd-color-neutral-50);
 			> .control-button {
 				> .icon {
 					--connotation: #{$disabled};
+					cursor: not-allowed;
 				}
 			}
 			> .playhead-position {
