--- a/components/audio/src/vwc-audio.scss
+++ b/components/audio/src/vwc-audio.scss
@@ -47,6 +47,7 @@ $disabled: var(--vvd-color-neutral-50);
 		&.disabled:not(.connotation-cta) {
 			> .scrubber {
 				#{media-controls-variables.$vwc-media-controls-scrubber-color}: #{$disabled};
+				--disable-scrub: #{$disabled};
 				cursor: not-allowed;
 				pointer-events: none;
 			}
