feat(vwc-audio): audio disabled state (VIV-873) (#1386)
* add disabled style

* audio disabled

* style disabled time stamp

* Set the disabled tests

* Update visual tests

* Visual test disabled and infinity

* Lint issue

* Update components/audio/src/vwc-audio.scss

* Update components/audio/src/vwc-audio.scss

* Linting

* Cover currentTime

* change scrub disabled bg color

* Update snapshot

* fix test for Safari

---------

Co-authored-by: RTannenbaum <rachel.tannenbaum@vonage.com>

--- a/components/audio/src/vwc-audio.scss
+++ b/components/audio/src/vwc-audio.scss
@@ -7,6 +7,7 @@
 @use '@vonage/vvd-foundation/scss/mixins/connotation' as connotation;
 @use '@vonage/vwc-media-controller/src/partials/vwc-media-controller-variables' as media-controls-variables;
 
+$disabled: var(--vvd-color-neutral-50);
 
 :host {
 	*:focus:not(:focus-visible) {
@@ -38,15 +39,36 @@
 			cursor: pointer;
 
 			> .icon {
-				color: var(#{connotation.$vvd-color-connotation});
+				color: inherit;
+			}
+		}
+
+		&.disabled.connotation-cta,
+		&.disabled:not(.connotation-cta) {
+			> .scrubber {
+				#{media-controls-variables.$vwc-media-controls-scrubber-color}: #{$disabled};
+				--disable-scrub: #{$disabled};
+				cursor: not-allowed;
+				pointer-events: none;
+			}
+			> .control-button {
+				> .icon {
+					--connotation: #{$disabled};
+					cursor: not-allowed;
+				}
+			}
+			> .playhead-position {
+				color: var(#{scheme-variables.$vvd-color-neutral-40});
 			}
 		}
 
 		> .playhead-position {
+
 			overflow: hidden;
 			width: 90px;
 			box-sizing: border-box;
 			justify-content: center;
+			color: var(#{scheme-variables.$vvd-color-on-canvas});
 			font-variant-numeric: tabular-nums;
 			text-align: center;
 			text-overflow: ellipsis;
